--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -10,11 +10,23 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
+    <!-- plugins:css -->
+    <link rel="stylesheet" th:href="@{assets/vendors/mdi/css/materialdesignicons.min.css}" />
+    <link rel="stylesheet" th:href="@{assets/vendors/flag-icon-css/css/flag-icon.min.css}" />
+    <!-- endinject -->
+    <!-- Plugin css for this page -->
+    <link rel="stylesheet" th:href="@{assets/vendors/font-awesome/css/font-awesome.min.css}" />
+    <!-- End plugin css for this page -->
+    <!-- Layout styles -->
+    <link rel="stylesheet" th:href="@{assets/css/style.css}" />
+    <!-- End layout styles -->
   </head>
   <body>
     <div th:replace="~{fragments/navbar::navbar}"></div>
-    <div th:replace="~{fragments/sidebar::aside}"></div>
-    <div layout:fragment="content"></div>
+    <div>
+      <div th:replace="~{fragments/sidebar::aside}"></div>
+      <div layout:fragment="content"></div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
