movie reply 병합테스트

--- a/src/main/resources/templates/ssh_contents/movieInfo.html
+++ b/src/main/resources/templates/ssh_contents/movieInfo.html
@@ -19,7 +19,7 @@
       <ul>
         <li th:each="reply : ${replies}">
           <p th:text="${reply.text}"></p>
-          <small th:text="${reply.writer}"></small>
+          <!-- <small th:text="${reply.writer}"></small> -->
         </li>
       </ul>
     </div>
