--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>form</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
     <p>title</p>
     <input type="text" th:value="${dto.mid}" readonly />
     <input type="text" th:value="${dto.title}" readonly />
     <div>reply</div>
+    <p id="replyCnt"></p>
+    <div class="reply"></div>
     <form action="" method="post" id="reply">
-      <input type="hidden" id="mid" th:value="${dto.mid}" />
-      <!--input type="text" id="text" th:value="${dto.text}" />
+      <!--input type="hidden" id="mid" th:value="${dto.mid}" />
+      <input type="text" id="text" th:value="${dto.text}" />
       <input type="text" id="mention" th:value="${dto.mention}" />
       <input type="hidden" id="replyer" th:value="${dto.replyer}" /-->
     </form>
