--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,8 +42,6 @@
             <div class="row">
               <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="product__item">
-                  <div class="product__item__pic set-bg" data-setbg="img/trending/trend-1.jpg">
-                  </div>
                   <div class="view"></div>
                 </div>
                 <div class="product__item__text">
@@ -68,8 +66,6 @@
             <div class="row">
               <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="product__item">
-                  <div class="product__item__pic set-bg" data-setbg="img/trending/trend-1.jpg">
-                  </div>
                   <div class="view"></div>
                 </div>
                 <div class="product__item__text">
@@ -79,75 +75,57 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="popular__product">
-          <div class="row">
-            <div class="col-lg-8 col-md-8 col-sm-8">
-              <div class="section-title">
-                <h4>웹툰 인기순위</h4>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4">
-              <div class="btn__all">
-                <a href="#" class="primary-btn">웹툰 인기순위 TOP10 <span class="arrow_right"></span></a>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="product__item">
-                <div class="product__item__pic set-bg" data-setbg="img/trending/trend-1.jpg">
+            <div class="row">
+              <div class="col-lg-8 col-md-8 col-sm-8">
+                <div class="section-title">
+                  <h4>웹툰 인기순위</h4>
                 </div>
-                <div class="view"></div>
               </div>
-              <div class="product__item__text">
-                <h5>
-                  <a href="#">웹툰1</a>
-                </h5>
+              <div class="col-lg-4 col-md-4 col-sm-4">
+                <div class="btn__all">
+                  <a href="#" class="primary-btn">웹툰 인기순위 TOP100 <span class="arrow_right"></span></a>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="product__item">
+                  <div class="view"></div>
+                </div>
+                <div class="product__item__text">
+                  <h5>
+                    <a href="#">영화1</a>
+                  </h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-8 top_right">
+          <div class="product__sidebar">
+            <div class="product__sidebar__view">
+              <div class="section-title">
+                <h5>인기순위</h5>
+              </div>
+              <ul class="filter__controls">
+                <li class="active" data-filter="*">일일</li>
+                <li data-filter=".week">주간</li>
+                <li data-filter=".month">월간</li>
+              </ul>
+            </div>
+            <div class="product__sidebar__comment">
+              <div class="section-title">
+                <h5>새로 나온 영화</h5>
+              </div>
+            </div>
+            <div class="product__sidebar__comment">
+              <div class="section-title">
+                <h5>새로 나온 게임</h5>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="live__product">
-      <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-6">
-          <div class="product__item">
-            <div class="product__item__pic set-bg" data-setbg="img/live/live-1.jpg">
-            </div>
-            <div class="view"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
-    <div class="col-lg-4 col-md-6 col-sm-8 top_right">
-      <div class="product__sidebar">
-        <div class="product__sidebar__view">
-          <div class="section-title">
-            <h5>인기순위</h5>
-          </div>
-          <ul class="filter__controls">
-            <li class="active" data-filter="*">일일</li>
-            <li data-filter=".week">주간</li>
-            <li data-filter=".month">월간</li>
-          </ul>
-        </div>
-        <div class="product__sidebar__comment">
-          <div class="section-title">
-            <h5>새로 나온 영화</h5>
-          </div>
-        </div>
-        <div class="product__sidebar__comment">
-          <div class="section-title">
-            <h5>새로 나온 게임</h5>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
   </section>
 </main>
 
