--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="btn__all">
-                  <a href="#" class="primary-btn">영화 인기순위 TOP100 <span class="arrow_right"></span></a>
+                  <a href="#" class="primary-btn">영화 인기순위 TOP100 <span class=""></span></a>
                 </div>
               </div>
             </div>
@@ -59,7 +59,7 @@
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="btn__all">
-                  <a href="#" class="primary-btn">게임 인기순위 TOP100 <span class="arrow_right"></span></a>
+                  <a href="#" class="primary-btn">게임 인기순위 TOP100 <span class=""></span></a>
                 </div>
               </div>
             </div>
@@ -83,7 +83,7 @@
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="btn__all">
-                  <a href="#" class="primary-btn">웹툰 인기순위 TOP100 <span class="arrow_right"></span></a>
+                  <a href="#" class="primary-btn">웹툰 인기순위 TOP100 <span class=""></span></a>
                 </div>
               </div>
             </div>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="product__item__text">
                   <h5>
-                    <a href="#">영화1</a>
+                    <a href="#">웹툰1</a>
                   </h5>
                 </div>
               </div>
