--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -17,7 +17,7 @@
                             <li class="active"><a href="./index.html">홈페이지</a></li>
                             <li><a href="./categories.html">카테고리 <span class="arrow_carrot-down"></span></a>
                                 <ul class="dropdown">
-                                    <li><a href="./anime-details.html">웹툰</a></li>
+                                    <li><a href="./anime-webtoon.html">웹툰</a></li>
                                     <li><a href="./anime-watching.html">영화</a></li>
                                     <li><a href="./anime-gamedetails.html">게임</a></li>
                                     <!-- <li><a href="./blog-details.html">Blog Details</a></li> -->
