--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="btn__all">
-                  <a href="#" class="primary-btn">영화 인기순위 TOP100 <span class=""></span></a>
+                  <a href="./ssh_contents/movieList.html" class="primary-btn">영화 인기순위 TOP100 <span class=""></span></a>
                 </div>
               </div>
             </div>
@@ -59,7 +59,7 @@
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="btn__all">
-                  <a href="#" class="primary-btn">게임 인기순위 TOP100 <span class=""></span></a>
+                  <a href="./ssh_contents/gameList.html" class="primary-btn">게임 인기순위 TOP100 <span class=""></span></a>
                 </div>
               </div>
             </div>
@@ -120,7 +120,7 @@
             </div>
             <div class="product__sidebar__comment">
               <div class="section-title">
-                <h5>새로 나온 게임</h5>
+                <h5>신작 게임</h5>
               </div>
             </div>
           </div>
