--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -31,12 +31,12 @@
             </div>
             <div class="col-lg-2">
                 <div class="header__right">
-                    <a href="#" class="search-switch"><span class="icon_search"></span></a>
+                    <a href="#" class="search-switch"><span class="icon_search" href="./login.html"></span></a>
                     <a href="./login.html">
                         <ul class="dropdown">
-                            <li><a href="./signup.html">회원가입</a></li>
+                            <!-- <li><a href="./signup.html">회원가입</a></li>
                             <li><a href="./login.html">로그인</a></li>
-                            <li><a href="./login.html">내정보</a></li>
+                            <li><a href="./login.html">내정보</a></li> -->
                         </ul>
                         <span class="icon_profile"></span>
                     </a>
