image 엔티티 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -108,7 +108,7 @@
                 <h5>인기순위</h5>
               </div>
               <ul class="filter__controls">
-                <li class="active" data-filter="*">일일</li>
+                <li data-filter="*" class="active">일일</li>
                 <li data-filter=".week">주간</li>
                 <li data-filter=".month">월간</li>
               </ul>
@@ -116,11 +116,21 @@
             <div class="product__sidebar__comment">
               <div class="section-title">
                 <h5>새로 나온 영화</h5>
+                <ul>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
               </div>
             </div>
             <div class="product__sidebar__comment">
               <div class="section-title">
                 <h5>신작 게임</h5>
+                <ul>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
               </div>
             </div>
           </div>
