--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,8 +15,9 @@
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li class="active"><a href="./index.html">홈페이지</a></li>
-                            <li><a href="./categories.html">카테고리 <span class=""></span></a>
+                            <li><a href="./categories.html">카테고리 <span class="arrow_carrot-down"></span></a>
                                 <ul class="dropdown">
+                                    <li><a href="./categories.html">카테고리</a></li>
                                     <li><a href="./anime-details.html">웹툰</a></li>
                                     <li><a href="./anime-watching.html">영화</a></li>
                                     <li><a href="./anime-gamedetails.html">게임</a></li>
@@ -34,9 +35,9 @@
                     <a href="#" class="search-switch"><span class="icon_search" href="./login.html"></span></a>
                     <a href="./login.html">
                         <ul class="dropdown">
-                            <!-- <li><a href="./signup.html">회원가입</a></li>
+                            <li><a href="./signup.html">회원가입</a></li>
                             <li><a href="./login.html">로그인</a></li>
-                            <li><a href="./login.html">내정보</a></li> -->
+                            <!-- <li><a href="./login.html">내정보</a></li> -->
                         </ul>
                         <span class="icon_profile"></span>
                     </a>
