--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <meta name="description" content="Anime Template">
-    <meta name="keywords" content="Anime, unica, creative, html">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Anime | Template</title>
+    <meta name="description" content="Anime Template" />
+    <meta name="keywords" content="Anime, unica, creative, html" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>OTT Contents</title>
 
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Css Styles -->
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" type="text/css">
-    <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css">
-    <link rel="stylesheet" th:href="@{/css/elegant-icons.css}" type="text/css">
-    <link rel="stylesheet" th:href="@{/css/plyr.css}" type="text/css">
-    <link rel="stylesheet" th:href="@{/css/nice-select.css}" type="text/css">
-    <link rel="stylesheet" th:href="@{/css/owl.carousel.min.css}" type="text/css">
-    <link rel="stylesheet" th:href="@{/css/slicknav.min.css}" type="text/css">
-    <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css">
-</head>
-<body>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/css/elegant-icons.css}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/css/plyr.css}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/css/nice-select.css}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/css/owl.carousel.min.css}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/css/slicknav.min.css}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css" />
+  </head>
+  <body>
     <div th:replace="./fragments/header::header"></div>
-    <main th:layout:fragment="content"></main>
-</body>
+    <!-- <main th:fragment="content"></main> -->
+    <div layout:fragment="content">
+      <!-- 여기에 자식 템플릿의 내용이 삽입됩니다 -->
+    </div>
+  </body>
 </html>
