원투원 관계 설정 수정

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -37,7 +37,7 @@
                         <ul class="dropdown">
                             <li><a href="./signup.html">회원가입</a></li>
                             <li><a href="./login.html">로그인</a></li>
-                            <!-- <li><a href="./login.html">내정보</a></li> -->
+                            <li><a href="./myprofile.html">내정보</a></li>
                         </ul>
                         <span class="icon_profile"></span>
                     </a>
