--- a/src/main/resources/templates/ott_contents/movieInfo.html
+++ b/src/main/resources/templates/ott_contents/movieInfo.html
@@ -39,18 +39,20 @@
       <div class="col-lg-6">
         <div class="anime__details__review">
           <div class="section-title">
-            <h5 id="replyCnt"></h5>
+            <h5 id="replyCnt" th:text="'댓글 '+${replies.size} + 개"></h5>
           </div>
+          <div class="p-4"></div>
           <!-- 댓글 시작 -->
           <div th:each="reply : ${replies}" class="anime__review__item">
             <div class="anime__review__item__pic" th:classappend="${reply.ref != null} ? 're-reply'">
               <img src="img/anime/review-1.jpg" alt="" />
             </div>
-            <div class="anime__review__item__text" data-id="${reply.rno}">
-              <h6 th:text="${reply.replyer}"><span th:text="${reply.createdDate}"></span> 작성자 - 1 Hour ago</h6>
-              <p th:if="${reply.mention}" th:text="${reply.mention}+에게"></p>
+            <div class="anime__review__item__text reply" th:data-id="${reply.rno}" th:data-replyer="${reply.replyer}">
+              <a class="replyer text-light" th:text="${reply.replyer}"></a>
+              <span class="text-secondary" th:text="' - '+${reply.createdDate}"> 작성자 - 1 Hour ago</span>
+              <span class="text-secondary" th:if="${reply.mention}" th:text="${reply.mention}+에게"></span>
+              <button type="button" class="delete-btn btn btn-secondary btn-sm" th:data-id="${reply.rno}">x</button>
               <p th:text="${reply.text}">댓글 텍스트</p>
-              <button type="button" class="btn delete-btn btn-outline-danger" th:data-id="${reply.rno}">x</button>
             </div>
           </div>
           <!-- 댓글 리스트 끝-->
@@ -61,10 +63,13 @@
           <div class="section-title">
             <h5>댓글 작성</h5>
           </div>
+          <a class="mention text-light"></a>
           <form id="replyForm" method="post">
             <input type="hidden" name="mid" th:value="${movieInfo.mid}" />
             <!-- ToDo 실제 사용자의 아이디를 받아야함 todo -->
             <input type="hidden" name="replyer" th:value="user1" />
+            <input type="hidden" name="mention" />
+            <input type="hidden" name="ref" />
             <textarea name="text" placeholder="Your Comment"></textarea>
             <button class="btn btn-insert" type="submit" style="font-size: medium">등록</button>
           </form>
