댓글영화상세페이지 통합

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,28 +5,29 @@
       <div class="row">
         <div class="col-lg-2">
           <div class="header__logo">
-            <a href="./index.html">
+            <!-- <a href="./index.html">
               <img src="img/logo.png" alt="" />
-            </a>
+            </a> -->
           </div>
         </div>
         <div class="col-lg-8">
           <div class="header__nav">
             <nav class="header__menu mobile-menu">
               <ul>
-                <li class="active"><a th:href="@{/}">Main</a></li>
+                <li><a th:href="@{/}">Main</a></li>
                 <li>
-                  <a th:href="@{/api/movies/list}">Movie List<span class="arrow_carrot-down"></span></a>
-                  <ul class="dropdown">
+                  <!-- <a th:href="@{/api/movies/list}">Movie List<span class="arrow_carrot-down"></span></a> -->
+                  <a th:href="@{/api/movies/list}">Movie List</a>
+                  <!-- <ul class="dropdown">
                     <li><a href="./categories.html">Categories</a></li>
                     <li><a href="./anime-details.html">Anime Details</a></li>
                     <li><a href="./anime-watching.html">Anime Watching</a></li>
                     <li><a href="./blog-details.html">Blog Details</a></li>
                     <li><a href="./signup.html">Sign Up</a></li>
                     <li><a href="./login.html">Login</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
-                <li><a href="./blog.html">Game List</a></li>
+                <li><a th:href="@{/api/games/list}">Game List</a></li>
                 <li><a href="#">Webtoon List</a></li>
               </ul>
             </nav>
@@ -41,5 +42,8 @@
       </div>
       <div id="mobile-menu-wrap"></div>
     </div>
+    <th:block layout:fragment="script">
+      <!-- 여기에 스크립트 삽입 -->
+    </th:block>
   </header>
 </html>
