--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -36,8 +36,8 @@
     <!-- Css Styles -->
 
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" type="text/css" />
-    <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css" />
-    <link rel="stylesheet" th:href="@{/css/elegant-icons.css}" type="text/css" />
+    <!-- <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css" /> -->
+    <!-- <link rel="stylesheet" th:href="@{/css/elegant-icons.css}" type="text/css" /> -->
     <link rel="stylesheet" th:href="@{/css/plyr.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/nice-select.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/owl.carousel.min.css}" type="text/css" />
@@ -52,5 +52,8 @@
     <div layout:fragment="content">
       <!-- 여기에 자식 템플릿의 내용이 삽입됩니다 -->
     </div>
+    <!-- 여기에 스크립트 삽입 -->
+    <script th:src="@{/js/menubar.js}"></script>
+    <th:block layout:fragment="script"></th:block>
   </body>
 </html>
