--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,7 +14,7 @@
           <div class="header__nav">
             <nav class="header__menu mobile-menu">
               <ul>
-                <li><a th:href="@{/}">Main</a></li>
+                <li><a th:href="@{/}">Home</a></li>
                 <li>
                   <!-- <a th:href="@{/api/movies/list}">Movie List<span class="arrow_carrot-down"></span></a> -->
                   <a th:href="@{/api/movies/list}">Movie List</a>
@@ -28,7 +28,7 @@
                   </ul> -->
                 </li>
                 <li><a th:href="@{/api/games/list}">Game List</a></li>
-                <li><a href="#">Webtoon List</a></li>
+                <!-- <li><a href="#">Webtoon List</a></li> -->
               </ul>
             </nav>
           </div>
