--- a/src/main/resources/templates/ott_contents/gameList.html
+++ b/src/main/resources/templates/ott_contents/gameList.html
@@ -10,6 +10,21 @@
         .trending__product {
           padding: 0 10%;
         }
+        .discount-badge {
+          position: absolute;
+          top: 10px;
+          right: 10px;
+          background-color: #e63946; /* 붉은색 */
+          color: white;
+          padding: 4px 8px;
+          font-weight: bold;
+          border-radius: 4px;
+          font-size: 0.9rem;
+          z-index: 10;
+        }
+        .product__item__pic {
+          position: relative; /* 배치 기준 */
+        }
       </style>
     </th:block>
     <th:block layout:fragment="title">
@@ -35,6 +50,8 @@
           <div class="col-lg-4 col-md-6 col-sm-6" th:each="game : ${games}">
             <div class="product__item">
               <div class="product__item__pic set-bg" style="background-image: url('/img/sample.png')">
+                <!-- 할인율이 0이 아니면 '할인중' 표시 -->
+                <div class="discount-badge" th:if="${game.discountRate != 0}">SALE !!!</div>
                 <!-- <div class="ep">18 / 18</div> -->
                 <!-- 추후 평점위치 <div class="comment"><i class="fa fa-comments"></i> 11</div> -->
                 <!-- 추후 댓글갯수위치 <div class="view"><i class="fa fa-eye"></i> 9141</div> -->
