--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -11,12 +11,12 @@
     <title>OTT Contents</title>
 
     <!-- BootStrap -->
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
-    />
+    /> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
@@ -35,6 +35,7 @@
 
     <!-- Css Styles -->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" type="text/css" />
+
     <!-- <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css" /> -->
     <!-- <link rel="stylesheet" th:href="@{/css/elegant-icons.css}" type="text/css" /> -->
     <link rel="stylesheet" th:href="@{/css/plyr.css}" type="text/css" />
@@ -43,6 +44,7 @@
     <link rel="stylesheet" th:href="@{/css/slicknav.min.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/reply.css}" type="text/css" />
+    <th:block layout:fragment="css"></th:block>
   </head>
   <body>
     <div th:replace="./fragments/header::header"></div>
