주석처리및 웹 config 생성,주석

--- a/src/main/resources/templates/uploads/upload.html
+++ b/src/main/resources/templates/uploads/upload.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<!-- 나중에 이페이지는 user중 관리자 권한이 있는 user에게만 보이게 설정 -->
 
 <head>
     <meta charset="UTF-8">
