--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -12,9 +12,9 @@
 
     <!-- BootStrap -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
     <script
@@ -34,7 +34,7 @@
     />
 
     <!-- Css Styles -->
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" type="text/css" />
+    <!-- <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" type="text/css" /> -->
     <!-- <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css" /> -->
     <!-- <link rel="stylesheet" th:href="@{/css/elegant-icons.css}" type="text/css" /> -->
     <link rel="stylesheet" th:href="@{/css/plyr.css}" type="text/css" />
@@ -43,6 +43,8 @@
     <link rel="stylesheet" th:href="@{/css/slicknav.min.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/reply.css}" type="text/css" />
+
+    <th:block layout:fragment="css"></th:block>
   </head>
   <body>
     <div th:replace="./fragments/header::header"></div>
